# LnC-1-iCalParser

./: StartingFramework.cabal  readme.md  readme.txt
examples/: multilineEvent.ics  test.ics
src/: Calendar.hs  DateTime.hs  Features.hs  Utils.hs
test/: Main.hs
