cabal-version:       3.0

name:                assignment-icalendar

version:             0.1.0.0

author:              Talen & Compilers

build-type:          Simple

executable test
  main-is:            Main.hs
  hs-source-dirs:     test

  build-depends:      base,
                      icalendar

library icalendar
  exposed-modules:      Calendar
                      , DateTime
                      , Features
                      , Utils

  build-depends:       array,
                       base >=4.14,
                       boxes,
                       containers,
                       uu-tc == 2015.1.1,
                       time,
                       text

  hs-source-dirs:      src

  default-language:    Haskell2010
